log
Thu 14 Sep 2023 04:15:02 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:3: error: expected ‘,’ or ‘;’ before ‘return’
   43 |   return NULL;
      |   ^~~~~~
treemap.c:40:12: error: unused variable ‘map’ [-Werror=unused-variable]
   40 |   TreeMap* map = malloc(sizeof(TreeMap))
      |            ^~~
treemap.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d2731c4
Thu 14 Sep 2023 04:15:08 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:12: error: unused variable ‘map’ [-Werror=unused-variable]
   40 |   TreeMap* map = malloc(sizeof(TreeMap));
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
dbc3d06
Thu 14 Sep 2023 04:15:52 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|8
total_score: 0/70
db6bfd3
Thu 14 Sep 2023 04:16:29 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
32a5e20
Thu 14 Sep 2023 04:18:49 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:12: error: expected identifier or ‘(’ before ‘=’ token
   51 |   TreeNode = tree->root;
      |            ^
Compilation failed
5e975a0
Thu 14 Sep 2023 04:20:33 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|7
total_score: 5/70
c3dea62
Thu 14 Sep 2023 04:21:46 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:33: error: ‘TreeNode’ has no member named ‘key’
   79 |     if(tree->lower_than(key,node->key)){
      |                                 ^~
Compilation failed
11af7eb
Thu 14 Sep 2023 04:22:38 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:18: error: ‘TreeMap’ has no member named ‘lowr’
   81 |     }else if(tree->lowr)
      |                  ^~
treemap.c:82:3: error: expected expression before ‘}’ token
   82 |   }
      |   ^
Compilation failed
3658b82
Thu 14 Sep 2023 04:23:54 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:84:25: error: expected ‘;’ before ‘}’ token
   84 |       tree->current=node
      |                         ^
      |                         ;
   85 |     }
      |     ~                    
Compilation failed
c2edf32
Thu 14 Sep 2023 04:24:18 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:85:14: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
   85 |       return node;
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
d0dec4c
Thu 14 Sep 2023 04:24:28 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
aaf5042
Thu 14 Sep 2023 04:26:35 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:17: error: initialization of ‘Pair *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
   51 |   Pair* nuevo = createTreeNode(key, value);
      |                 ^~~~~~~~~~~~~~
treemap.c:51:9: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   51 |   Pair* nuevo = createTreeNode(key, value);
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
9ec3931
Thu 14 Sep 2023 04:28:12 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:17: error: initialization of ‘Pair *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
   51 |   Pair* nuevo = createTreeNode(key, value);
      |                 ^~~~~~~~~~~~~~
treemap.c:52:25: error: expected expression before ‘;’ token
   52 |   tree->current = nuevo*;
      |                         ^
cc1: all warnings being treated as errors
Compilation failed
1cb601c
Thu 14 Sep 2023 04:29:46 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:6: error: expected ‘(’ before ‘nuevoPar’
   53 |   if nuevoPar!=NULL{
      |      ^~~~~~~~
      |      (
treemap.c:53:6: error: statement with no effect [-Werror=unused-value]
   53 |   if nuevoPar!=NULL{
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7276e04
Thu 14 Sep 2023 04:32:52 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:13: error: unused variable ‘parent’ [-Werror=unused-variable]
   57 |   TreeNode* parent = tree->current;
      |             ^~~~~~
treemap.c:55:13: error: unused variable ‘nuevoNodo’ [-Werror=unused-variable]
   55 |   TreeNode* nuevoNodo = createTreeNode(key, value);
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
07335d3
Thu 14 Sep 2023 04:33:44 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:59:16: error: ‘node’ undeclared (first use in this function)
   59 |     tree->root=node;
      |                ^~~~
treemap.c:59:16: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:55:13: error: unused variable ‘nuevoNodo’ [-Werror=unused-variable]
   55 |   TreeNode* nuevoNodo = createTreeNode(key, value);
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
920fce4
Thu 14 Sep 2023 04:34:41 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:62:20: error: ‘node’ undeclared (first use in this function)
   62 |       parent->left=node
      |                    ^~~~
treemap.c:62:20: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:62:24: error: expected ‘;’ before ‘}’ token
   62 |       parent->left=node
      |                        ^
      |                        ;
   63 |     }
      |     ~                   
Compilation failed
7fb6508
Thu 14 Sep 2023 04:34:47 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:62:20: error: ‘node’ undeclared (first use in this function)
   62 |       parent->left=node;
      |                    ^~~~
treemap.c:62:20: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a98d32a
Thu 14 Sep 2023 04:36:25 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
f321be1
Thu 14 Sep 2023 04:36:56 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
911ad47
Thu 14 Sep 2023 04:37:07 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
15182d1
Thu 14 Sep 2023 04:39:19 PM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
2c744a4
Thu 14 Sep 2023 04:40:33 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
e229861
Thu 14 Sep 2023 04:47:01 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
c754ec5
Thu 14 Sep 2023 04:48:35 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
cf8283d
Thu 14 Sep 2023 04:50:37 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
880332f
